# bookstore

./: .gitignore  README.md  index.html  pyproject.toml  web bookstore.html
bookstore/: __init__.py  views.py
bookstore/templates/: index.html
tests/: test_bookstore.py
